--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "reactjs",
@@ -30,8 +32,10 @@
   },
   "devDependencies": {
     "css-loader": "^6.5.0",
+    "gh-pages": "^3.2.3",
     "mini-css-extract-plugin": "^2.4.3",
     "sass": "^1.43.4",
     "style-loader": "^3.3.1"
-  }
+  },
+  "homepage": "https://fredyflemus.github.io/ToDoList_withReact_v2"
 }
